<resources>
    <string name="app_name">BMI</string>

    <!--  Main Activity  -->
    <string name="bmi_main_img_description">Asterix and Obelix.</string>
    <string name="bmi_main_mass_kg">Mass [kg]</string>
    <string name="bmi_main_mass_lb">Mass [lb]</string>
    <string name="bmi_main_height_cm">Height [cm]</string>
    <string name="bmi_main_height_ft">Height [ft]</string>
    <string name="bmi_main_height_in">Height [in]</string>
    <string name="bmi_main_calculate">Calculate</string>

    <string name="bmi_main_underweight">Underweight</string>
    <string name="bmi_main_normal">Normal weight</string>
    <string name="bmi_main_overweight">Overweight</string>
    <string name="bmi_main_obese">Obese</string>
    <string name="bmi_main_extremely_obese">Extremely obese</string>

    <string name="bmi_main_empty_input_error">This field cannot be empty.</string>
    <string name="bmi_main_zero_input_error">This field cannot be equal to 0.</string>
    <string name="bmi_main_error_max_value">Max. value is</string>

    <!--  Menu  -->
    <string name="bmi_menu_open_history">History</string>
    <string name="bmi_menu_switch_to_imperial_units">Switch to imperial units</string>
    <string name="bmi_menu_switch_to_metric_units">Switch to metric units</string>

    <!--    About Activity-->
    <string name="bmi_about_action_bar_title">About me</string>
    <string name="bmi_about_about_me">About me</string>
    <string name="bmi_about_paul_img_description">Myself</string>
    <string name="bmi_about_bio">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
        magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
        consequat. \nDuis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
        pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est
        laborum. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
        dolore
        magna aliqua. \nUt enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
        consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
        pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est
        laborum. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
        dolore
        magna aliqua. \nUt enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
        consequat.
    </string>
    <string name="bmi_about_hello_header">Hello!\nI\'m Paul, what\'s your name?</string>
    <string name="bmi_about_enter_name_hint">Enter your name</string>
    <string name="bmi_about_done">Done</string>

    <string name="bmi_about_hello">Hello</string>
    <string name="bmi_about_mysterious_wanderer">Mysterious Wanderer</string>
    <string name="bmi_about_info_button_img_description">Forward arrow navigating to Info</string>

    <!--    Info Activity -->
    <string name="bmi_info_action_bar_title">Info</string>
    <string name="bmi_info_category_img_description">BMI category image</string>
    <string name="bmi_info_basic_info">
        BMI (Body Mass Index) is a value derived from the mass
        (weight) and height of an individual.\n\n
        The BMI is defined as the body mass divided by the square of the body
        height, and is universally expressed in units of kg/m2, resulting from mass in kilograms and height in metres.
    </string>
    <string name="bmi_info_category_description">Normal</string>

    <!-- History Activity -->
    <string name="bmi_history_sharedpref">com.paweloot.bmi.history</string>
    <string name="bmi_history_action_bar_title">History</string>
</resources>
