<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/bmi_spacing_small"
                android:layout_marginBottom="@dimen/bmi_spacing_small"
                android:layout_marginStart="@dimen/bmi_spacing_small"
                android:layout_marginEnd="@dimen/bmi_spacing_small">

    <ImageView
            android:id="@+id/category_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:contentDescription="@string/bmi_info_category_img_description"
            tools:src="@drawable/bmi_normal"
    />
    <TextView
            android:id="@+id/basic_info_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignBottom="@+id/category_image"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@+id/category_image"
            android:paddingLeft="@dimen/bmi_spacing_small"
            android:paddingRight="@dimen/bmi_spacing_small"
            android:text="@string/bmi_info_basic_info"
            style="@style/ContentText"
    />
    <TextView
            android:id="@+id/category_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/basic_info_text"
            android:padding="@dimen/bmi_spacing_small"
            android:textAlignment="center"
            android:textSize="@dimen/bmi_font_larger"
            android:fontFamily="@font/roboto_medium"
            tools:text="@string/bmi_info_category_description"
    />
</RelativeLayout>