<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
>

    <TextView
            android:id="@+id/history_mass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/bmi_spacing_small"
            android:layout_marginTop="@dimen/bmi_spacing_small"
            android:textSize="@dimen/bmi_font_normal"
            android:text="@string/bmi_main_mass_kg"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            style="@style/ContentText"
    />
    <TextView
            android:id="@+id/history_height"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/bmi_spacing_small"
            android:layout_marginTop="@dimen/bmi_spacing_small"
            android:textSize="@dimen/bmi_font_normal"
            android:text="@string/bmi_main_height_cm"
            app:layout_constraintTop_toBottomOf="@+id/history_mass"
            app:layout_constraintStart_toStartOf="parent"
            style="@style/ContentText"
    />
    <TextView
            android:id="@+id/history_height_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/bmi_spacing_small"
            android:layout_marginTop="@dimen/bmi_spacing_small"
            android:textSize="@dimen/bmi_font_normal"
            android:text="@string/bmi_main_height_in"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/history_height"
            style="@style/ContentText"
    />
    <TextView
            android:id="@+id/history_bmi_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/bmi_spacing_small"
            android:layout_marginEnd="@dimen/bmi_spacing_small"
            android:layout_marginBottom="@dimen/bmi_spacing_small"
            android:textSize="@dimen/bmi_font_huge"
            tools:text="25.5"
            app:layout_constraintBottom_toTopOf="@+id/history_date"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            style="@style/ContentText"
    />
    <TextView
            android:id="@+id/history_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/bmi_spacing_small"
            android:layout_marginBottom="@dimen/bmi_spacing_small"
            android:textSize="@dimen/bmi_font_normal"
            tools:text="07/13/2019"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            style="@style/ContentText"
    />
    <TextView
            android:id="@+id/history_mass_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/bmi_spacing_small"
            android:layout_marginStart="@dimen/bmi_spacing_small"
            android:textSize="@dimen/bmi_font_normal"
            tools:text="75"
            app:layout_constraintStart_toEndOf="@+id/history_mass"
            app:layout_constraintTop_toTopOf="parent"
            style="@style/ContentText"
    />
    <TextView
            android:id="@+id/history_height_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/bmi_spacing_small"
            android:layout_marginTop="@dimen/bmi_spacing_small"
            android:textSize="@dimen/bmi_font_normal"
            tools:text="182"
            app:layout_constraintStart_toEndOf="@+id/history_height"
            app:layout_constraintTop_toBottomOf="@+id/history_mass_value"
            style="@style/ContentText"
    />
    <TextView
            android:id="@+id/history_height_in_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/bmi_spacing_small"
            android:layout_marginTop="@dimen/bmi_spacing_small"
            android:textSize="@dimen/bmi_font_normal"
            tools:text="6"
            app:layout_constraintStart_toEndOf="@+id/history_height_in"
            app:layout_constraintTop_toBottomOf="@+id/history_height_value"
            style="@style/ContentText"
    />
    <View
            android:id="@+id/history_list_divider"
            android:layout_width="match_parent"
            android:layout_height="@dimen/bmi_list_divider_height"
            android:layout_marginStart="@dimen/bmi_spacing_small"
            android:layout_marginEnd="@dimen/bmi_spacing_small"
            android:layout_marginTop="@dimen/bmi_spacing_small"
            android:background="?android:attr/listDivider"
            app:layout_constraintTop_toBottomOf="@+id/history_date"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
    />

</android.support.constraint.ConstraintLayout>
